private application doesn't show in search applications
