# storage/api-docs/api-docs.json
@@ -22,6 +22,56 @@
                 "operationId": "ApplciationIndex",
                 "parameters": [
                     {
+                        "name": "title",
+                        "in": "query",
+                        "description": "title to filter by",
+                        "required": false,
+                        "style": "form",
+                        "schema": {
+                            "type": "text"
+                        }
+                    },
+                    {
+                        "name": "price_from",
+                        "in": "query",
+                        "description": "price_from to filter by",
+                        "required": false,
+                        "style": "form",
+                        "schema": {
+                            "type": "number"
+                        }
+                    },
+                    {
+                        "name": "price_to",
+                        "in": "query",
+                        "description": "price_to to filter by",
+                        "required": false,
+                        "style": "form",
+                        "schema": {
+                            "type": "number"
+                        }
+                    },
+                    {
+                        "name": "status",
+                        "in": "query",
+                        "description": "status to filter by",
+                        "required": false,
+                        "style": "form",
+                        "schema": {
+                            "type": "number"
+                        }
+                    },
+                    {
+                        "name": "category_id",
+                        "in": "query",
+                        "description": "category_id to filter by",
+                        "required": false,
+                        "style": "form",
+                        "schema": {
+                            "type": "number"
+                        }
+                    },
+                    {
                         "name": "resume_id",
                         "in": "query",
                         "description": "resume_id to filter by",
